overflow mobile version fix
overflow mobile version fix with sass

--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,10 @@ header .header__nav {
 .hero .hero__button:hover {
   cursor: pointer;
 }
+.hero .hero__image__container {
+  width: 100%;
+  overflow: hidden;
+}
 .hero .hero__image {
   margin-top: 10vh;
   width: 200%;
