--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -31,6 +31,11 @@
         }
     }
 
+    .hero__image__container {
+        width: 100%;
+        overflow: hidden;
+    }
+
     .hero__image {
         margin-top: 10vh;
         width: 200%;
